# skybot

./: guix.scm  pyproject.toml
.guix/modules/: skybot-package.scm
core/: config.py
